# cartesian-explorer

./: .gitignore  HISTORY.rst  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonpublish.yml  test.yml
cartesian_explorer/: Explorer.py  ExplorerBasic.py  __init__.py  caches.py  parallels.py  plot_functions.py
cartesian_explorer/caches/: TODO.md  __init__.py  cacheIFC.py  directory_csv.py  test_directory_csv.py
cartesian_explorer/lib/: argument_inspect.py  dep_graph.py  dict_product.py  lru_cache.py  test_argument_inspect.py
catresian_explorer/lib/: lru_cache.py
docs/: Example usage.ipynb  Example usage.nblink  cartesian_explorer.rst  conf.py  development.rst  index.rst
docs/assets/: custom.css
docs/mapping/: Mapping_tutorial.ipynb
examples/: Calculate in parallel.ipynb  Digraph.gv  Example usage.ipynb  Which cache to use?.ipynb
tests/: test_basic.py  test_caches.py  test_joblib.py  test_mproc_caching.py  test_plotting.py  test_quimb.py  test_resolver.py  test_vars_providers.py  test_xarray.py
tests/perftest/: README.md  compare.py  measure.py  test_perfest.py
tests/profile/: README.md  profile_lib.py  test_profile_lib.py
